--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -161,14 +161,14 @@ jobs:
           echo "--- Running check on $TARGET ---"
           make EXTRA_FLAGS=-Werror CONFIG=$TARGET BETAFLIGHT_CONFIG=../config
 
-      - name: Debug - List build output files
-        if: always()
-        working-directory: ./betaflight
-        run: |
-          echo "=== Searching for build artifacts ==="
-          find . -type f \( -name "*.hex" -o -name "*.bin" -o -name "*.elf" \) -ls
-          echo "=== Contents of obj directory ==="
-          ls -laR obj/ || echo "obj/ directory not found"
+#      - name: Debug - List build output files
+#        if: always()
+#        working-directory: ./betaflight
+#        run: |
+#          echo "=== Searching for build artifacts ==="
+#          find . -type f \( -name "*.hex" -o -name "*.bin" -o -name "*.elf" \) -ls
+#          echo "=== Contents of obj directory ==="
+#          ls -laR obj/ || echo "obj/ directory not found"
 
       - name: Upload Firmware Artifact
         uses: actions/upload-artifact@v4
@@ -176,6 +176,6 @@ jobs:
         with:
           name: firmware-${{ matrix.target }}
           path: |
-            betaflight/obj/*.hex
+            ./betaflight/obj/*.hex
           retention-days: 30
           if-no-files-found: warn
